<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2007-2008 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
 
<resources>

	
	<!--  Sensor Simulator -->
	<string name="sensorsimulatorsettings">Sensor Simulator settings</string>
	<string name="sensorsimulator">Sensor Simulator</string>
	<string name="settings">Settings</string>
	<string name="connect">Connect</string>
	<string name="testing">Testing</string>
	<string name="disconnect">Disconnect</string>
	<string name="IP_address">IP address:</string>
	<string name="socket">Socket:</string>
	<string name="real_device_data">Real device data:</string>
	<string name="sensor_simulator_data">Sensor simulator data:</string>
	<string name="enable_sensors">Enable sensors</string>
	<string name="auto_update">Auto update</string>
	<string name="disabled">disabled</string>
	<string name="set_update_interval">Set update interval...</string>
	<string name="ask_update_interval">Enter update interval (ms)</string>
	<string name="sensorsimulator_settings">SensorSimulator settings...</string>
	<string name="connect_to_sensorsimulator">Connect to SensorSimulator</string>
	<string name="sensorsimulator_settings_description">
		Enter the connection settings below.
		They are displayed on the Sensor Simulator.</string>
	<string name="sensorsimulator_testing_description">
		Test the connection to the Sensor Simulator.
		Disable the sensors and disconnect after testing.</string>
	<string name="update_rate">update rate</string>
	<string name="update_rate_seconds">update rate (1/s)</string>
	
	<string name="new_item">New item</string>
	
	<string name="hello">Hello</string>
	
</resources> 
