<?xml version="1.0" encoding="utf-8"?>
<!-- * Port of OpenIntents simulator to Android 2.1, extension to multi * 
	emulator support, and GPS and battery simulation is developed as a * diploma 
	thesis of Josip Balic at the University of Zagreb, Faculty of * Electrical 
	Engineering and Computing. * * Copyright (C) 2007-2010 OpenIntents.org * 
	* Licensed under the Apache License, Version 2.0 (the "License"); * you may 
	not use this file except in compliance with the License. * You may obtain 
	a copy of the License at * * http://www.apache.org/licenses/LICENSE-2.0 * 
	* Unless required by applicable law or agreed to in writing, software * distributed 
	under the License is distributed on an "AS IS" BASIS, * WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. * See the License for 
	the specific language governing permissions and * limitations under the License. -->

<TabHost
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tabhost"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TabWidget
			android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="64dip">
		</TabWidget>
		<FrameLayout
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="0dip"
			android:layout_weight="1">

			<!-- ############################################ Tab 1 ############################################ -->


			<LinearLayout
				android:id="@+id/content1"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.1"
				android:layout_marginTop="5dip">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sensorsimulator_settings_description"
					android:layout_marginTop="10dip" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/IP_address"
					android:layout_marginTop="10dip" />
				<EditText
					android:id="@+id/ipaddress"
					android:text="10.0.2.2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/socket"
					android:layout_marginTop="10dip" />
				<EditText
					android:id="@+id/socket"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip" />

			</LinearLayout>

			<!-- ############################################ Tab 2 ############################################ -->
			<LinearLayout
				android:id="@+id/content2"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="2.0"
				android:layout_marginTop="10dip">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip"
					android:text="@string/sensorsimulator_testing_description" />
				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip">
					<LinearLayout
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">
						<LinearLayout
							android:orientation="horizontal"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="5dip">
							<Button
								android:id="@+id/buttonconnect"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/connect" />
							<Button
								android:id="@+id/buttondisconnect"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/disconnect" />

						</LinearLayout>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip">
					<TextView
						android:id="@+id/datatype"
						android:layout_width="dip"
						android:layout_height="wrap_content"
						android:layout_weight="3"
						android:text="" />

				</LinearLayout>
				<ScrollView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<LinearLayout
						android:id="@+id/sensordatalist"
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" />
				</ScrollView>
				<!-- <ListView android:id="@+id/sensordatalist" android:layout_width="fill_parent" 
					android:layout_height="wrap_content" /> -->
				<!-- EditText android:id="@+id/edittext" android:layout_width="fill_parent" 
					android:layout_height="wrap_content" /> -->
			</LinearLayout>


			<!-- ############################################ Tabs end ############################################ -->
		</FrameLayout>
	</LinearLayout>
</TabHost>
